...
        <!--Application-->
        <scene sceneID="JPo-4y-FX3">
            <objects>
                <application id="hnw-xV-0zn" sceneMemberID="viewController">
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                        <items>
                            <menuItem title="JsonToModel" id="1Xt-HY-uBw">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="JsonToModel" systemMenu="apple" id="uQy-DD-JDr">
                                    <items>
                                        <menuItem title="About JsonToModel" id="5kV-Vb-QxS">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
...
                                                                <connections>
                                                                    <action selector="converterTypeChanged:" target="XfG-lQ-9wD" id="VZe-Gc-ME0"/>
                                                                </connections>
                                                            </popUpButton>
                                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0ry-Qt-gBB">
                                                                <rect key="frame" x="1" y="258" width="118" height="32"/>
                                                                <buttonCell key="cell" type="push" title="New template" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="o30-w8-43c">
                                                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                                    <font key="font" metaFont="system"/>
                                                                </buttonCell>
                                                                <connections>
                                                                    <action selector="actionNewTemplate:" target="XfG-lQ-9wD" id="dS7-0Y-Qze"/>
                                                                </connections>
...
                                            </customView>
                                            <segmentedControl verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yhl-5t-TFt">
                                                <rect key="frame" x="244" y="565" width="198" height="24"/>
                                                <segmentedCell key="cell" borderStyle="border" alignment="left" segmentDistribution="fillEqually" style="rounded" trackingMode="selectOne" id="yGG-g8-pa9">
                                                    <font key="font" metaFont="system"/>
                                                    <segments>
                                                        <segment label="same" width="46"/>
                                                        <segment label="aB" width="45" selected="YES" tag="1"/>
                                                        <segment label="a_b" width="45"/>
                                                        <segment label="AB"/>
                                                    </segments>
                                                </segmentedCell>
                                                <connections>
                                                    <action selector="actionSegChange:" target="XfG-lQ-9wD" id="6sY-lB-sMx"/>
                                                </connections>
                                            </segmentedControl>
...
                            </textField>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="DDb-MQ-khp">
                                <rect key="frame" x="536" y="13" width="82" height="32"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="68" id="Ikq-M0-4a1"/>
                                </constraints>
                                <buttonCell key="cell" type="push" title="Create" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="i87-Yc-LjG">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="actionCreate:" target="9Rh-Gq-MUu" id="pk5-Sq-KJX"/>
                                </connections>
...
